dynamic route using consts.ts

--- a/src/pages/distrito-[...slug]/index.astro
+++ b/src/pages/distrito-[...slug]/index.astro
@@ -2,106 +2,8 @@
 import { DISTRITOS } from '../../consts';
 
 export async function getStaticPaths() {
-  const pages = [
-    {
-        name: 'Aveiro',
-        slug: 'aveiro',
-    },
-    {
-        name: 'Beja',
-        slug: 'beja',
-    },
-    {
-        name: 'Braga',
-        slug: 'braga',
-    },
-    {
-        name: 'Bragança',
-        slug: 'braganca',
-    },
-    {
-        name: 'Coimbra',
-        slug: 'coimbra',
-    },
-    {
-        name: 'Évora',
-        slug: 'evora',
-    },
-    {
-        name: 'Faro',
-        slug: 'faro',
-    },
-    {
-        name: 'Guarda',
-        slug: 'guarda',
-    },
-    {
-        name: 'Aveiro',
-        slug: 'aveiro',
-    },
-    {
-        name: 'Aveiro',
-        slug: 'aveiro',
-    },
-    {
-        name: 'Aveiro',
-        slug: 'aveiro',
-    },
-    {
-        name: 'Aveiro',
-        slug: 'aveiro',
-    },
-    {
-        name: 'Aveiro',
-        slug: 'aveiro',
-    },
-    {
-        name: 'leiria',
-        slug: 'Leiria',
-    },
-    {
-        name: 'Lisboa',
-        slug: 'lisboa',
-    },
-    {
-        name: 'Portalegre',
-        slug: 'portalegre',
-    },
-    {
-        name: 'Porto',
-        slug: 'porto',
-    },
-    {
-        name: 'Região Autónoma da Madeira',
-        slug: 'regiao-autonoma-da-madeira',
-    },
-    {
-        name: 'Região Autónoma dos Açores',
-        slug: 'regiao-autonoma-dos-acores',
-    },
-    {
-        name: 'Santarém',
-        slug: 'santarem',
-    },
-    {
-        name: 'Setúbal',
-        slug: 'setubal',
-    },
-    {
-        name: 'Viana do Castelo',
-        slug: 'viana-do-castelo',
-    },
-    {
-        name: 'Vila Real',
-        slug: 'vila-real',
-    },
-    {
-        name: 'Viseu',
-        slug: 'viseu',
-    },
-  ];
-  
-  return pages.map(({ slug, name }) => {
+ 
+  return DISTRITOS.map(({ slug, name }) => {
      return {
       params: { slug },
       props: { name },
